# marimo-mcp

./: .gitignore  README.md  SETUP.md  pyproject.toml
marimo-mcp-bridge/: install.sh  package-lock.json  package.json  tsconfig.json
marimo-mcp-bridge/src/: extension.ts
marimo_mcp/: client.py  discovery.py  lsp_client.py  server.py  static_analysis.py
marimo_mcp/tools/: create.py
tests/: test_client.py  test_discovery.py  test_tools.py
