[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marimo-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
    "psutil>=5.9",
    "marimo>=0.23.4",
]

[project.scripts]
marimo-mcp = "marimo_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
